gitops/rifqoi-me/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: rifqoi-me
  name: rifqoi-me
