gitops/rifqoi-me/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    visualize: "true"
  name: rifqoi-me
  namespace: rifqoi-me
spec:
  selector:
    app: rifqoi-me
  ports:
    - name: http
      protocol: TCP
      port: 4321
      targetPort: 4321
  type: ClusterIP
