gitops/rifqoi-me/virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: rifqoi-me-vs
  namespace: rifqoi-me
spec:
  hosts:
    - rifqoi.me
    - rifqoi-me
  gateways:
    - rifqoi-me-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: rifqoi-me
